# Vultana

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rename_members.py  vcpkg-configuration.json  vcpkg.json
Assets/: Scene_BusterDrone.xml  Scene_SingleModelTest.xml  Scene_Sponza.xml
Assets/Models/CornellBox/: CornellBox.gltf
Assets/Models/Sponza/glTF/: Sponza.gltf
Assets/Shaders/GLSL/: ComputeDraw.comp
Config/: ImGui.ini  VultanaEngine.ini
Framework/: CMakeLists.txt
Framework/AssetManager/: MeshMaterial.cpp  MeshMaterial.hpp  ModelLoader.cpp  ModelLoader.hpp  ResourceCache.cpp  ResourceCache.hpp  TextureLoader.cpp  TextureLoader.hpp
Framework/Common/: Concurrent.hpp  String.hpp
Framework/Core/: ImGUIImplement.cpp  ImGUIImplement.hpp  VultanaEditor.cpp  VultanaEditor.hpp  VultanaEngine.cpp  VultanaEngine.hpp  VultanaGUI.cpp  VultanaGUI.hpp
Framework/Editor/: ImGUIImplement.cpp  ImGUIImplement.hpp  VultanaEditor.cpp  VultanaEditor.hpp
Framework/RHI/: RHI.cpp  RHI.hpp  RHIBindGroup.hpp  RHIBindGroupLayout.hpp  RHIBuffer.hpp  RHIBufferView.hpp  RHICommandBuffer.hpp  RHICommandList.hpp  RHICommon.hpp  RHIDefines.hpp  RHIDescriptor.hpp  RHIDescriptorSet.hpp  RHIDevice.cpp  RHIDevice.hpp  RHIFence.hpp  RHIGPU.hpp  RHIHeap.hpp  RHIInstance.cpp  RHIInstance.hpp  RHIModule.hpp  RHIPCH.hpp  RHIPipeline.hpp  RHIPipelineLayout.hpp  RHIPipelineState.hpp  RHIQueue.hpp  RHIResource.hpp  RHISampler.hpp  RHIShader.hpp  RHIShaderModule.hpp  RHISurface.hpp  RHISwapchain.hpp  RHISynchronous.hpp  RHITexture.hpp  RHITextureView.hpp
Framework/RHI/RHID3D/: D3DArgs.hpp  RHICommonD3D.hpp
Framework/RHI/RHIVulkan/: BindGroupLayoutVK.cpp  BindGroupLayoutVK.hpp  BindGroupVK.cpp  BindGroupVK.hpp  BufferVK.cpp  BufferVK.hpp  BufferViewVK.cpp  BufferViewVK.hpp  CommandBufferVK.cpp  CommandBufferVK.hpp  CommandListVK.cpp  CommandListVK.hpp  DeviceVK.cpp  DeviceVK.hpp  GPUVK.cpp  GPUVK.hpp  InstanceVK.cpp  InstanceVK.hpp  PipelineLayoutVK.cpp  PipelineLayoutVK.hpp  PipelineVK.cpp  PipelineVK.hpp  QueueVK.cpp  QueueVK.hpp  RHIBufferVK.hpp  RHIBufferVk.cpp  RHICommandListVK.cpp  RHICommandListVK.hpp  RHICommonVK.hpp  RHIDeletionQueueVK.cpp  RHIDeletionQueueVK.hpp  RHIDescriptorAllocatorVK.cpp  RHIDescriptorAllocatorVK.hpp  RHIDescriptorVK.cpp  RHIDescriptorVK.hpp  RHIDeviceVK.cpp  RHIDeviceVK.hpp  RHIFenceVK.cpp  RHIFenceVK.hpp  RHIHeapVK.cpp  (+30 more)
Framework/RHI/Vulkan/: VKDevice.cpp  VKDevice.hpp  VKInstance.cpp  VKInstance.hpp  VKRHIModule.cpp  VKRHIModule.hpp
Framework/Renderer/: ClearUAV.cpp  ClearUAV.hpp  DAG.cpp  DAG.hpp  GPUScene.cpp  GPUScene.hpp  Pipeline.cpp  Pipeline.hpp  PipelineStateCache.cpp  PipelineStateCache.hpp  RGRenderer.hpp  RenderBatch.hpp  RenderFrame.cpp  RenderGraph.cpp  Renderer.cpp  Renderer.hpp  Renderer.hpp.bak  RendererBase.cpp  RendererBase.hpp  Shader.cpp  Shader.hpp  Shader.inl  ShaderCache.cpp  ShaderCache.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  StagingBufferAllocator.cpp  StagingBufferAllocator.hpp
Framework/Renderer/DeferredPath/: DeferredBasePass.cpp  DeferredBasePass.hpp
Framework/Renderer/ForwardPath/: ForwardBasePass.cpp  ForwardBasePass.hpp
Framework/Renderer/RenderGraph/: DAG.cpp  DAG.hpp  Pipeline.cpp  Pipeline.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraph.inl  RenderGraphBuilder.hpp  RenderGraphCommon.hpp  RenderGraphHandle.hpp  RenderGraphPass.cpp  RenderGraphPass.hpp  RenderGraphResource.cpp  RenderGraphResource.hpp  RenderGraphResourceAllocator.cpp  RenderGraphResourceAllocator.hpp
Framework/Renderer/RenderModules/: GPUDrivenDebugLine.cpp  GPUDrivenDebugLine.hpp  HiZBuffer.cpp  HiZBuffer.hpp
Framework/Renderer/RenderPasses/: HiZBuffer.cpp  HiZBuffer.hpp
Framework/Renderer/RenderResources/: IndexBuffer.cpp  IndexBuffer.hpp  RawBuffer.cpp  RawBuffer.hpp  StructuredBuffer.cpp  StructuredBuffer.hpp  Texture2D.cpp  Texture2D.hpp  TypedBuffer.cpp  TypedBuffer.hpp
Framework/Scene/: Camera.cpp  Camera.hpp  GLTFParser.cpp  GLTFParser.hpp  MeshMaterial.cpp  MeshMaterial.hpp  ModelLoader.cpp  ModelLoader.hpp  TextureLoader.hpp  World.cpp  World.hpp
Framework/Scene/SceneComponent/: Animation.cpp  Animation.hpp  BillboardSprite.cpp  BillboardSprite.hpp  DirectionalLight.hpp  IVisibleObject.cpp  IVisibleObject.hpp  Light.hpp  Primitive.hpp  SkeletalMesh.cpp  SkeletalMesh.hpp  SkeletonMesh.cpp  SkeletonMesh.hpp  StaticMesh.cpp  StaticMesh.hpp
Framework/Scene/SceneComponent/Lights/: DirectionalLight.cpp  Light.hpp
Framework/Utilities/: AssetsManager.cpp  AssetsManager.hpp  Concurrent.hpp  EASTLAllocator.cpp  FilePaths.cpp  FilePaths.hpp  GLFWindow.hpp  GUIUtil.hpp  Hash.hpp  KeyCodes.hpp  LinearAllocator.hpp  Log.hpp  Math.hpp  Memory.hpp  ParallelFor.hpp  String.hpp  Utility.hpp
Framework/Window/: GLFWindow.cpp  GLFWindow.hpp  Win32Window.cpp  Win32Window.hpp
Framework/Windows/: GLFWindow.cpp  GLFWindow.hpp
Shaders/: Box.hlsl  ClearUAV.hlsl  Copy.hlsl  GPUDrivenDebugLine.hlsl  HiZBufferReprojection.hlsl  ImGui.hlsl  InstanceCulling.hlsl  MeshletCulling.hlsl  Model.hlsl  ModelID.hlsl  ModelMeshlet.hlsl  ModelOutline.hlsl  Shaders.cmake  TestCompute.hlsl  Triangle.hlsl  VertexSkinning.hlsl
Shaders/Common/: Common.hlsli  Debug.hlsli  FFX_SPD.hpp  GPUScene.hlsli  GlobalConstants.hlsli  Meshlet.hlsli  Model.hlsli  ModelConstants.hlsli  ShadingModel.hlsli  Texture.hlsli
Shaders/HLSL/: Triangle.hlsl
Tests/: CMakeLists.txt  EngineTest.cpp  FirstTest.cpp  RenderGraphTest.cpp  ShaderTest.cpp  WinMain.cpp
Tools/GraphViz/: RenderGraph.html
